# mitre-agentic-langGraph-mcp

./: README.md  incident_report.md  pyproject.toml
src/mitre_agentic/: app.py  config.py  mcp_client.py  quick_test.py  schemas.py  snapsot_app.py
src/mitre_agentic/agents/: detection_agent.py  detection_reasoning_agent.py  intel_agent.py  mapping_agent.py  mitigation_agent.py  report_agent.py  triage_agent.py  visualization_agent.py
src/mitre_agentic/notebooks/: app.ipynb  viz_graph.ipynb
src/mitre_agentic/reporting/: incident_report.md
src/mitre_agentic/workflows/: graph.py  nodes.py  run_workflow.py  state.py  visualization_graph.py
